@@ -9,6 +9,7 @@
 6. Respect server's "Filter Genres at the Album & Track Level" and
    "Filter Contributor Roles at the Album & Track Level" settings.
 7. Respect library_id setting for Additional Browse Modes.
+8. Add option to use browse modes as supplied by server.
 
 0.0.7
 -----
